deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-app-deployment
  labels:
    app: local-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-app
  template:
    metadata:
      labels:
        app: local-app
    spec:
      containers:
      - name: node-app
        image: local-app:v1
        # CRÍTICO PARA LABORATORIOS LOCALES:
        # Evita que Kubernetes intente buscar la imagen en Docker Hub
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
