localstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack-deployment
  namespace: default
  labels:
    app: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
      - name: localstack
        image: localstack/localstack:3.4.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4566
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: localstack-service
  namespace: default
spec:
  selector:
    app: localstack
  ports:
  - port: 4566
    targetPort: 4566
