service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-app-service
spec:
  type: ClusterIP
  selector:
    app: local-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
