ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-app-ingress
  namespace: default
  annotations:
    ingressnamespace.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: app.local.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: local-app-service
            port:
              number: 80
